[gd_scene load_steps=12 format=3 uid="uid://oprwljn3eiv0"]

[ext_resource type="Texture2D" uid="uid://bx0brthougm5" path="res://Resources/Icons/add-user-pink-icon.png" id="1_0d8dp"]
[ext_resource type="Script" path="res://Components/post_card_window.gd" id="1_c3kyd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_itb4x"]
bg_color = Color(0.0313726, 0.0196078, 0.0941176, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
shadow_size = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ims8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8dcdu"]
content_margin_left = 48.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.878431, 0.223529, 0.992157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fvaog"]
content_margin_left = 48.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gildr"]
content_margin_left = 48.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ymf0"]
content_margin_left = 48.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oq3c5"]
content_margin_left = 48.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n7gja"]
content_margin_left = 48.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_thsov"]
bg_color = Color(0.0313726, 0.0196078, 0.0941176, 1)
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2

[node name="PostCardWindow" type="VBoxContainer"]
auto_translate_mode = 1
offset_right = 1443.0
offset_bottom = 986.0
size_flags_horizontal = 3
script = ExtResource("1_c3kyd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
auto_translate_mode = 1
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_itb4x")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Panel"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.075
anchor_right = 0.993763
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer/HBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.223529, 0.992157, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ims8")
text = "LIST CARD"
uppercase = true

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer/HBoxContainer/Label"]
auto_translate_mode = 1
custom_minimum_size = Vector2(20, 20)
layout_mode = 0
offset_left = 161.0
offset_right = 181.0
offset_bottom = 20.0
texture = ExtResource("1_0d8dp")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="CardFilter" type="OptionButton" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(168, 34)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_8dcdu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_fvaog")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_gildr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_2ymf0")
theme_override_styles/hover = SubResource("StyleBoxFlat_oq3c5")
theme_override_styles/normal = SubResource("StyleBoxFlat_n7gja")
selected = 0
item_count = 2
popup/item_0/text = "Stocks"
popup/item_0/id = 0
popup/item_1/text = "Listed"
popup/item_1/id = 1

[node name="Panel" type="Panel" parent="."]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_thsov")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.010395
anchor_top = 0.0180467
anchor_right = 0.991684
anchor_bottom = 0.980892
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
metadata/_edit_use_anchors_ = true

[node name="CardsContainer" type="GridContainer" parent="Panel/ScrollContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 10

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/Panel/HBoxContainer/HBoxContainer3/CardFilter" to="." method="_on_card_filter_item_selected"]
